[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provisioner"
version = "1.0.0"
description = "A CLI tool for provisioning resources across different environments"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
provisioner = "provisioner_cli:cli"

[tool.setuptools]
py-modules = ["provisioner_cli"]
